--- a/style.css
+++ b/style.css
@@ -57,6 +57,46 @@ body {
 }
 
 .search button svg {
-    width: 30px;
-    height: 30px;
+    width: 24px;
+    height: 24px;
+}
+
+.weather-icon {
+    width: 170px;
+    margin-top: 30px;
+}
+
+.weather h1 {
+    font-size: 80px;
+    font-weight: 500;
+}
+
+.weather h2 {
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+
+.details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+
+.col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.col img {
+    width: 40px;
+    margin-right: 10px;
+}
+
+.wind, .humidity {
+    font-size: 28px;
+    margin-top: -6px;
 }
