--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root{
+    --primary:#9bafbb6c;
+    --secondary:#9e9fa0;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -16,7 +21,7 @@ body {
 .card {
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg, #00feba, #402cc0);
+    background: linear-gradient(135deg, var(--primary), var(--secondary));
     color: white;
     margin: 100px auto 0;
     border-radius: 20px;
