--- a/style.css
+++ b/style.css
@@ -105,3 +105,19 @@ body {
     font-size: 28px;
     margin-top: -6px;
 }
+
+.weather {
+    display: none;
+}
+
+.error {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 14px;
+    display: none;
+}
+
+.error img {
+    width: 80px;
+    margin-top: 30px;
+}
